[gd_scene load_steps=14 format=3 uid="uid://pqncwaqg3722"]

[ext_resource type="Texture2D" uid="uid://csprjlnwqyv41" path="res://Assets/start/start.jpg" id="1_b2n4a"]
[ext_resource type="Script" uid="uid://vo3b8jlfll4w" path="res://catch_game.gd" id="1_gqh4f"]
[ext_resource type="Script" uid="uid://dphiiackclf0" path="res://catch-game-player.gd" id="3_52ida"]
[ext_resource type="Texture2D" uid="uid://cpxyp1co73yad" path="res://Assets/characters/poti-mini-game.png" id="4_gqh4f"]
[ext_resource type="AudioStream" uid="uid://bdqmynojosnw0" path="res://Assets/Sounds/jump-funny.mp3" id="5_76sr6"]
[ext_resource type="Texture2D" uid="uid://bf7oob4yr2p8h" path="res://Assets/single/bubble-chat-info.png" id="6_qu7hr"]
[ext_resource type="AudioStream" uid="uid://ci15uchm8iyjv" path="res://Assets/Sounds/catch.mp3" id="6_x0hok"]
[ext_resource type="AudioStream" uid="uid://bg71vcvy40nk8" path="res://Assets/Sounds/Under-the-Big-Top.wav" id="7_x0hok"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqh4f"]
size = Vector2(147, 386)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52ida"]
size = Vector2(2005.5, 46)

[sub_resource type="LabelSettings" id="LabelSettings_x0hok"]
font_size = 65

[sub_resource type="LabelSettings" id="LabelSettings_b2n4a"]
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_h74rr"]
font_size = 40

[node name="CatchGame" type="Node2D"]
script = ExtResource("1_gqh4f")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_b2n4a")

[node name="Player" type="CharacterBody2D" parent="." groups=["Player"]]
script = ExtResource("3_52ida")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(1527.5, 830.365)
shape = SubResource("RectangleShape2D_gqh4f")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(1522, 841)
texture = ExtResource("4_gqh4f")

[node name="JumpSound" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("5_76sr6")
volume_db = -8.0

[node name="Ground" type="StaticBody2D" parent="." groups=["Ground"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(968, 1052)
scale = Vector2(1.2, 1)
shape = SubResource("RectangleShape2D_52ida")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2(-108, 722)
scale = Vector2(0.0563511, 35.9855)
shape = SubResource("RectangleShape2D_52ida")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground"]
position = Vector2(2031, 714)
scale = Vector2(0.0563511, 35.9855)
shape = SubResource("RectangleShape2D_52ida")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 42.0
offset_top = 35.0
offset_right = 637.0
offset_bottom = 126.0
text = "זמן שנשאר: 60 שניות"
label_settings = SubResource("LabelSettings_x0hok")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1599.0
offset_top = 41.0
offset_right = 1864.0
offset_bottom = 124.0
text = "\"נקודות: 0"
label_settings = SubResource("LabelSettings_b2n4a")

[node name="UIOverlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="bg" type="Sprite2D" parent="UIOverlay"]
position = Vector2(893, 477)
scale = Vector2(0.6, 0.6)
texture = ExtResource("6_qu7hr")

[node name="MessageLabel" type="Label" parent="UIOverlay"]
layout_mode = 0
offset_left = 318.0
offset_top = 346.0
offset_right = 1475.0
offset_bottom = 402.0
text = "ניצחת כל הכבוד"
label_settings = SubResource("LabelSettings_h74rr")
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="UIOverlay"]
layout_mode = 0
offset_left = 1066.0
offset_top = 488.0
offset_right = 1185.0
offset_bottom = 538.0
theme_override_font_sizes/font_size = 30
text = "נסה שוב"

[node name="ExitButton" type="Button" parent="UIOverlay"]
layout_mode = 0
offset_left = 546.0
offset_top = 483.0
offset_right = 725.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 30
text = "צא מהמשחק"

[node name="CatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_x0hok")
volume_db = -8.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_x0hok")
volume_db = -8.0
autoplay = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="pressed" from="UIOverlay/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="UIOverlay/ExitButton" to="." method="_on_exit_button_pressed"]
